dist/1.0/bin/sample/retrieveUnpackaged/objects/Generic_Product_Data__c.object
<CustomObject>
    <fields>
        <fullName>Generic_Product__c</fullName>
        <description>Relation to Generic Product</description>
        <inlineHelpText>Relation to Generic Product</inlineHelpText>
        <label>Generic Product</label>
        <referenceTo>Generic_Product__c</referenceTo>
        <relationshipLabel>Generic Products Data</relationshipLabel>
        <relationshipName>Generic_Products_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Language for description</description>
        <inlineHelpText>Language for description</inlineHelpText>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>Slovak</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Czech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Romanian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Selected_by_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if GP should be selected by default [not used in Product Configurator]</description>
        <inlineHelpText>Indicates if GP should be selected by default [not used in Product Configurator]</inlineHelpText>
        <label>Selected by Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <description>Technical field used for migration between environments.</description>
        <externalId>true</externalId>
        <inlineHelpText>Technical field used for migration between environments.</inlineHelpText>
        <label>Source Record Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Description for Generic Product</description>
        <inlineHelpText>Description for Generic Product</inlineHelpText>
        <label>Value</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>Generic Product Data</label>
    <nameField>
        <label>Generic Product Data</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Generic Products Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>